<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SecondScreen"
    tools:showIn="@layout/activity_second_screen">

    <TextView
        android:id="@+id/hiMessage"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hi_blank"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/provideAssMessage"
        app:layout_constraintEnd_toStartOf="@+id/putNameValHere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/putNameValHere"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/provideAssMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hiMessage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/provideAssMessage"
        android:layout_width="wrap_content"
        android:layout_height="137dp"
        android:text="@string/provide_ass_message"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondScreenNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        android:onClick="nextButtonPressed"
        android:text="@string/second_screen_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provideAssMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>